--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -16,4 +16,5 @@ jobs:
     - name: Install Deno
       run: curl -fsSL https://deno.land/x/install/install.sh | sh
     - name: Run tests
-      run: /home/pomatti/.deno/bin/deno test --allow-net
+      run: /home/runner/.deno/bin/deno test --allow-net
+      
